Calendar date screen: realized deleting to-do list items

--- a/app/src/main/res/layout/to_do_list_item.xml
+++ b/app/src/main/res/layout/to_do_list_item.xml
@@ -14,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:paddingStart="8dp"
         android:background="@drawable/background_shopping_list_item">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,7 +23,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/deleteButtonContainer">
+            app:layout_constraintEnd_toStartOf="@id/deleteButtonContainer"
+            android:layout_marginStart="8dp">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/doneIconsContainer"
                 android:layout_width="24dp"
@@ -55,7 +55,6 @@
                 app:layout_constraintStart_toEndOf="@id/doneIconsContainer"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:gravity="start|center_vertical"
                 android:includeFontPadding="false"
                 android:ellipsize="marquee"
@@ -68,13 +67,14 @@
 
         <FrameLayout
             android:id="@+id/deleteButtonContainer"
-            android:layout_width="32dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
+            android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:clickable="true">
             <ImageButton
