--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -125,16 +125,26 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <ImageButton
+                android:id="@+id/clearToDoListButton"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                app:layout_constraintTop_toTopOf="@id/addToDoListItemInput"
+                app:layout_constraintBottom_toBottomOf="@id/addToDoListItemInput"
+                app:layout_constraintStart_toStartOf="parent"
+                android:background="@drawable/icon_delete_sweep_color_link"
+                android:onClick="@{() -> viewModel.onClearToDoListClick()}" />
+
             <EditText
                 android:id="@+id/addToDoListItemInput"
                 style="@style/Input"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/noteContainer"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/clearToDoListButton"
                 app:layout_constraintEnd_toStartOf="@id/addToDoListItemButton"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="4dp"
                 android:inputType="text"
                 android:singleLine="true"
                 android:maxLength="70"
