--- a/app/src/main/res/layout/post_address_list_item.xml
+++ b/app/src/main/res/layout/post_address_list_item.xml
@@ -22,7 +22,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/controlsContainer"
             android:layout_marginEnd="8dp">
@@ -35,7 +34,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:textColor="@color/app_green"
                 android:textSize="16sp"
-                android:text="@{viewModel.address.name.empty ? @string/unknown_addressee : viewModel.address.name}"
+                android:text="@{viewModel.address.name}"
+                app:booleanVisibility="@{viewModel.isAddresseeNameViewVisible}"
                 tools:text="Виталий Гудков" />
 
             <TextView
@@ -46,44 +46,45 @@
                 app:layout_constraintTop_toBottomOf="@id/addresseeNameView"
                 app:layout_constraintStart_toStartOf="parent"
                 android:textSize="14sp"
-                tools:text="Литейный проспект"
-                android:text="@{viewModel.address.street.empty ? @string/three_question_marks : viewModel.address.street}" />
+                android:text="@{viewModel.address.street}"
+                app:booleanVisibility="@{viewModel.isStreetViewVisible}"
+                tools:text="Литейный проспект" />
 
             <TextView
                 android:id="@+id/buildingNumberView"
                 style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/streetView"
-                app:layout_constraintBottom_toBottomOf="@id/streetView"
-                app:layout_constraintStart_toEndOf="@+id/streetView"
+                app:layout_constraintTop_toBottomOf="@id/streetView"
+                app:layout_constraintStart_toStartOf="parent"
                 android:textSize="14sp"
-                tools:text=", дом 63"
-                android:text='@{String.format(", %s %s", @string/bld, viewModel.address.buildingNumber.empty ? @string/question_mark : viewModel.address.buildingNumber)}' />
+                android:text='@{String.format("%s %s", @string/bld, viewModel.address.buildingNumber)}'
+                app:booleanVisibility="@{viewModel.isBuildingNumberViewVisible}"
+                tools:text="Дом 63" />
 
             <TextView
                 android:id="@+id/apartmentNumberView"
                 style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/buildingNumberView"
-                app:layout_constraintBottom_toBottomOf="@id/buildingNumberView"
-                app:layout_constraintStart_toEndOf="@id/buildingNumberView"
-                app:booleanVisibility="@{viewModel.apartmentViewVisible}"
+                app:layout_constraintTop_toBottomOf="@id/buildingNumberView"
+                app:layout_constraintStart_toStartOf="parent"
                 android:textSize="14sp"
-                tools:text=", кв. 87"
-                android:text='@{String.format(", %s %s", @string/apt, viewModel.address.apartmentNumber.empty ? @string/question_mark : viewModel.address.apartmentNumber)}' />
+                android:text='@{String.format("%s %s", @string/apt, viewModel.address.apartmentNumber)}'
+                app:booleanVisibility="@{viewModel.apartmentViewVisible}"
+                tools:text="Квартира 87" />
 
             <TextView
                 android:id="@+id/cityView"
                 style="@style/Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/streetView"
+                app:layout_constraintTop_toBottomOf="@id/apartmentNumberView"
                 app:layout_constraintStart_toStartOf="parent"
                 android:textSize="14sp"
-                tools:text="Санкт-Петербург"
-                android:text="@{viewModel.address.city.empty ? @string/three_question_marks : viewModel.address.city}" />
+                android:text="@{viewModel.address.city}"
+                app:booleanVisibility="@{viewModel.isCityViewVisible}"
+                tools:text="Санкт-Петербург" />
 
             <TextView
                 android:id="@+id/edgeRegionView"
@@ -92,10 +93,10 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/cityView"
                 app:layout_constraintStart_toStartOf="parent"
-                app:booleanVisibility="@{viewModel.edgeRegionViewVisible}"
                 android:textSize="14sp"
-                tools:text="Ленинградская область"
-                android:text="@{viewModel.address.edgeRegion}" />
+                android:text="@{viewModel.address.edgeRegion}"
+                app:booleanVisibility="@{viewModel.edgeRegionViewVisible}"
+                tools:text="Ленинградская область" />
 
             <TextView
                 android:id="@+id/postcodeView"
@@ -105,16 +106,16 @@
                 app:layout_constraintTop_toBottomOf="@id/edgeRegionView"
                 app:layout_constraintStart_toStartOf="parent"
                 android:textSize="14sp"
-                tools:text="191025"
-                android:text="@{viewModel.address.postcode.empty ? @string/six_question_marks : viewModel.address.postcode}" />
+                app:booleanVisibility="@{viewModel.isPostcodeViewVisible}"
+                android:text="@{viewModel.address.postcode}"
+                tools:text="191025" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/controlsContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/addressContainer"
-            app:layout_constraintBottom_toBottomOf="@id/addressContainer"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
             <ImageButton
