--- a/app/src/main/res/layout/date_view.xml
+++ b/app/src/main/res/layout/date_view.xml
@@ -10,6 +10,7 @@
 
     <TextClock
         android:id="@+id/dayOfMonthView"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -17,7 +18,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:includeFontPadding="false"
         android:format12Hour="d"
         android:format24Hour="d"
         android:textSize="48sp"
@@ -27,6 +27,7 @@
 
     <TextClock
         android:id="@+id/monthView"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/dayOfMonthView"
@@ -34,9 +35,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:includeFontPadding="false"
         android:format12Hour="MMMM"
         android:format24Hour="MMMM"
         android:textSize="20sp"
+        android:textColor="@color/black_opacity_50"
         tools:text="July" />
 </androidx.constraintlayout.widget.ConstraintLayout>
