--- a/app/src/main/res/layout/calendar_month_layout.xml
+++ b/app/src/main/res/layout/calendar_month_layout.xml
@@ -31,7 +31,7 @@
 
         <TextView
             android:id="@+id/firstDayView"
-            style="@style/Text"
+            style="@style/Text.CalendarWeekDay"
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,7 +44,7 @@
 
         <TextView
             android:id="@+id/secondDayView"
-            style="@style/Text"
+            style="@style/Text.CalendarWeekDay"
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -56,7 +56,7 @@
 
         <TextView
             android:id="@+id/thirdDayView"
-            style="@style/Text"
+            style="@style/Text.CalendarWeekDay"
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -68,7 +68,7 @@
 
         <TextView
             android:id="@+id/fourthDayView"
-            style="@style/Text"
+            style="@style/Text.CalendarWeekDay"
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -80,7 +80,7 @@
 
         <TextView
             android:id="@+id/fifthDayView"
-            style="@style/Text"
+            style="@style/Text.CalendarWeekDay"
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -92,7 +92,7 @@
 
         <TextView
             android:id="@+id/sixthDayView"
-            style="@style/Text"
+            style="@style/Text.CalendarWeekDay"
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -104,7 +104,7 @@
 
         <TextView
             android:id="@+id/seventhDayView"
-            style="@style/Text"
+            style="@style/Text.CalendarWeekDay"
             android:layout_width="36dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
