--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -82,7 +82,7 @@
 
         <TextView
             android:id="@+id/notesView"
-            style="@style/MainScreenSection.Notes"
+            style="@style/Text.MainScreenSection.Notes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/calendarView"
@@ -93,7 +93,7 @@
 
         <TextView
             android:id="@+id/shoppingListsView"
-            style="@style/MainScreenSection.ShoppingList"
+            style="@style/Text.MainScreenSection.ShoppingList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/notesView"
@@ -104,7 +104,7 @@
 
         <TextView
             android:id="@+id/postAddressesView"
-            style="@style/MainScreenSection.PostAddresses"
+            style="@style/Text.MainScreenSection.PostAddresses"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/shoppingListsView"
