--- a/app/src/main/res/layout/fragment_main_notes.xml
+++ b/app/src/main/res/layout/fragment_main_notes.xml
@@ -41,6 +41,7 @@
             android:orientation="vertical"
             app:booleanVisibility="@{!viewModel.isNotesVisible()}">
             <TextView
+                style="@style/Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
