--- a/app/src/main/res/layout/fragment_post_addresses.xml
+++ b/app/src/main/res/layout/fragment_post_addresses.xml
@@ -43,6 +43,7 @@
             android:orientation="vertical"
             app:booleanVisibility="@{!viewModel.isAddressListVisible()}">
             <TextView
+                style="@style/Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
