--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -72,6 +72,7 @@
             android:orientation="vertical"
             app:booleanVisibility="@{!viewModel.isShoppingListVisible()}">
             <TextView
+                style="@style/Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
