--- a/app/src/main/res/layout/to_do_list_item.xml
+++ b/app/src/main/res/layout/to_do_list_item.xml
@@ -48,6 +48,7 @@
 
             <TextView
                 android:id="@+id/titleView"
+                style="@style/Text"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -56,7 +57,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="8dp"
                 android:gravity="start|center_vertical"
-                android:includeFontPadding="false"
                 android:ellipsize="marquee"
                 android:singleLine="true"
                 android:textSize="18sp"
