--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,40 +12,43 @@
         android:layout_height="match_parent"
         style="@style/ScreenContainer">
 
-        <TextView
-            android:id="@+id/title"
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/shoppingListSectionSwitch"
             android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/shoppingListSectionSwitchTitle"
+            app:layout_constraintBottom_toBottomOf="@id/shoppingListSectionSwitchTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            android:checked="@{viewModel.isShoppingListSectionEnabled()}" />
+
+        <TextView
+            android:id="@+id/shoppingListSectionSwitchTitle"
+            style="@style/Text.SettingsScreenTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/subTitle"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/shoppingListSectionSwitch"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            android:textAlignment="center"
-            android:textSize="32sp"
-            android:text="Settings Screen" />
+            android:text="@string/display_section_shopping_list" />
+
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/postAddressesSectionSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/postAddressesSectionSwitchTitle"
+            app:layout_constraintBottom_toBottomOf="@id/postAddressesSectionSwitchTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            android:checked="@{viewModel.isPostAddressesSectionEnabled()}" />
 
         <TextView
-            android:id="@+id/subTitle"
-            android:layout_width="wrap_content"
+            android:id="@+id/postAddressesSectionSwitchTitle"
+            style="@style/Text.SettingsScreenTitle"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintBottom_toTopOf="@id/hourglassIcon"
-            app:layout_constraintStart_toStartOf="@id/title"
-            app:layout_constraintEnd_toEndOf="@id/title"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            android:text="Not yet implemented" />
+            app:layout_constraintTop_toBottomOf="@id/shoppingListSectionSwitchTitle"
+            app:layout_constraintStart_toEndOf="@id/postAddressesSectionSwitch"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/display_section_post_addresses" />
 
-        <ImageView
-            android:id="@+id/hourglassIcon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:layout_constraintTop_toBottomOf="@id/subTitle"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/subTitle"
-            app:layout_constraintEnd_toEndOf="@id/subTitle"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/icon_hourglass_black_25" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
