--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -11,6 +11,12 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="Text.SettingsScreenTitle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
+
     <style name="Text.Location">
         <item name="android:ellipsize">marquee</item>
         <item name="singleLine">true</item>
