--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -11,10 +11,19 @@
         <item name="android:textSize">24sp</item>
     </style>
 
-    <style name="Text.SettingsScreenTitle">
+    <style name="Text.SettingsTitle">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/app_blue</item>
+    </style>
+
+    <style name="Text.SettingsScreenMenuItem">
         <item name="android:textSize">18sp</item>
         <item name="android:paddingTop">8dp</item>
         <item name="android:paddingBottom">8dp</item>
+    </style>
+
+    <style name="Text.Link">
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="Text.Location">
