--- a/app/src/main/res/layout/fragment_post_addresses.xml
+++ b/app/src/main/res/layout/fragment_post_addresses.xml
@@ -13,6 +13,17 @@
         android:layout_height="match_parent"
         style="@style/ScreenContainer">
 
+        <ImageView
+            android:id="@+id/clearAllButton"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            app:layout_constraintTop_toTopOf="@id/addPostAddressButton"
+            app:layout_constraintBottom_toBottomOf="@id/addPostAddressButton"
+            app:layout_constraintStart_toStartOf="parent"
+            android:clickable="true"
+            android:onClick="@{() -> viewModel.onClearPostAddressesClick()}"
+            android:src="@drawable/icon_delete_sweep_color_link" />
+
         <TextView
             android:id="@+id/title"
             style="@style/Text.ScreenTitle"
@@ -20,7 +31,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="@id/addPostAddressButton"
             app:layout_constraintBottom_toBottomOf="@id/addPostAddressButton"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/clearAllButton"
+            app:layout_constraintEnd_toStartOf="@id/addPostAddressButton"
+            android:textAlignment="center"
             android:layout_marginEnd="16dp"
             android:text="@string/post_addresses" />
 
