--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,11 +14,11 @@
     <color name="app_light_green">#5465B653</color>
     <color name="app_blue">#03A9F4</color>
     <color name="app_light_blue">#5403A9F4</color>
-    <color name="app_dark_gray">#808080</color>
-    <color name="app_medium_dark_gray">#A5A5A5</color>
-    <color name="app_medium_gray">@color/black_opacity_20</color>
-    <color name="app_light_gray">@color/black_opacity_05</color>
-    <color name="app_default_text_color">@color/app_medium_dark_gray</color>
+    <color name="app_dark_gray">#515151</color>
+    <color name="app_medium_dark_gray">#858585</color>
+    <color name="app_medium_gray">#B3B3B3</color>
+    <color name="app_light_gray">#DFDFDF</color>
+    <color name="app_default_text_color">@color/app_dark_gray</color>
     <color name="black_opacity_05">#0D000000</color>
     <color name="black_opacity_20">#33000000</color>
     <color name="black_opacity_40">#66000000</color>
