--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -171,17 +171,13 @@
                 android:orientation="vertical"
                 app:booleanVisibility="@{!viewModel.isToDoListVisible()}">
                 <TextView
-                    style="@style/Text"
+                    style="@style/Text.ExplanatoryMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:textSize="16sp"
                     android:text="@string/crete_to_do_lists_title" />
 
                 <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="center"
+                    style="@style/ExplanatoryMessageIcon"
                     android:src="@drawable/icon_checklist_blue" />
             </LinearLayout>
 
