--- a/app/src/main/res/layout/fragment_post_addresses.xml
+++ b/app/src/main/res/layout/fragment_post_addresses.xml
@@ -56,17 +56,13 @@
             android:orientation="vertical"
             app:booleanVisibility="@{!viewModel.isAddressListVisible()}">
             <TextView
-                style="@style/Text"
+                style="@style/Text.ExplanatoryMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="16sp"
                 android:text="@string/add_postal_addresses_title" />
 
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
+                style="@style/ExplanatoryMessageIcon"
                 android:src="@drawable/icon_letter_blue" />
         </LinearLayout>
 
