--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -60,17 +60,13 @@
             android:orientation="vertical"
             app:booleanVisibility="@{!viewModel.isShoppingListVisible()}">
             <TextView
-                style="@style/Text"
+                style="@style/Text.ExplanatoryMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="16sp"
                 android:text="@string/make_shopping_lists_title" />
 
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
+                style="@style/ExplanatoryMessageIcon"
                 android:src="@drawable/icon_shopping_cart_blue" />
         </LinearLayout>
 
