--- a/app/src/main/res/layout/shopping_list_item.xml
+++ b/app/src/main/res/layout/shopping_list_item.xml
@@ -20,7 +20,7 @@
 
         <TextView
             android:id="@+id/titleView"
-            style="@style/Text"
+            style="@style/Text.ShoppingListItem"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="@id/controls"
@@ -28,10 +28,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/controls"
             android:layout_marginEnd="10dp"
-            android:gravity="start|center_vertical"
-            android:ellipsize="marquee"
-            android:singleLine="true"
-            android:textSize="18sp"
             tools:text="Масло сливочное 2шт."
             android:text="@{viewModel.shoppingListItem.text}" />
 
