--- a/app/src/main/res/layout/to_do_list_item.xml
+++ b/app/src/main/res/layout/to_do_list_item.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:padding="8dp"
         android:background="@drawable/background_shopping_list_item">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,8 +24,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/deleteButtonContainer"
-            android:layout_marginStart="8dp">
+            app:layout_constraintEnd_toStartOf="@id/deleteButton">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/doneIconsContainer"
                 android:layout_width="24dp"
@@ -50,37 +50,26 @@
                 android:id="@+id/titleView"
                 style="@style/Text"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/doneIconsContainer"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:gravity="start|center_vertical"
-                android:ellipsize="marquee"
-                android:singleLine="true"
-                android:textSize="18sp"
                 android:textColor="@{viewModel.checked ? @color/app_green : @color/app_default_text_color}"
                 tools:text="Погладить котика"
                 android:text="@{viewModel.toDoListItem.text}" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <FrameLayout
-            android:id="@+id/deleteButtonContainer"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
+        <ImageButton
+            android:id="@+id/deleteButton"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp">
-            <ImageView
-                android:id="@+id/deleteButton"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/icon_delete_gray" />
-        </FrameLayout>
+            android:background="@drawable/icon_delete_gray" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
