--- a/app/src/main/res/layout/shopping_list_item.xml
+++ b/app/src/main/res/layout/shopping_list_item.xml
@@ -13,34 +13,46 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:padding="8dp"
         android:background="@drawable/background_shopping_list_item">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/doneIconsContainer"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+            <ImageView
+                android:id="@+id/notDoneIconView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/icon_empty_check_box_gray"
+                app:booleanVisibility="@{!viewModel.checked}" />
+            <ImageView
+                android:id="@+id/doneIconView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/icon_check_gray"
+                app:booleanVisibility="@{viewModel.checked}" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/titleView"
-            style="@style/Text.ShoppingListItem"
+            style="@style/Text"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="@id/controls"
             app:layout_constraintBottom_toBottomOf="@id/controls"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/doneIconsContainer"
             app:layout_constraintEnd_toStartOf="@id/controls"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="start|center_vertical"
+            android:textColor="@{viewModel.checked ? @color/app_medium_gray : @color/app_default_text_color}"
             tools:text="Масло сливочное 2шт."
             android:text="@{viewModel.shoppingListItem.text}" />
-
-        <View
-            android:id="@+id/crossOutLine"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            app:layout_constraintTop_toTopOf="@id/titleView"
-            app:layout_constraintBottom_toBottomOf="@id/titleView"
-            app:layout_constraintStart_toStartOf="@id/titleView"
-            app:layout_constraintEnd_toEndOf="@id/titleView"
-            android:background="@color/black_opacity_40"
-            android:visibility="gone" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/controls"
@@ -50,38 +62,24 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <FrameLayout
-                android:id="@+id/setHighPriorityButtonContainer"
+            <ImageButton
+                android:id="@+id/setHighPriorityButton"
                 android:layout_width="24dp"
-                android:layout_height="match_parent"
+                android:layout_height="24dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp">
-                <ImageView
-                    android:id="@+id/setHighPriorityButton"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/icon_high_priority_gray" />
-            </FrameLayout>
+                android:background="@drawable/icon_high_priority_gray" />
 
-            <FrameLayout
-                android:id="@+id/deleteButtonContainer"
+            <ImageButton
+                android:id="@+id/deleteButton"
                 android:layout_width="24dp"
-                android:layout_height="match_parent"
-                app:layout_constraintTop_toTopOf="@id/setHighPriorityButtonContainer"
-                app:layout_constraintBottom_toBottomOf="@id/setHighPriorityButtonContainer"
-                app:layout_constraintEnd_toStartOf="@id/setHighPriorityButtonContainer"
-                android:layout_marginEnd="10dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp">
-                <ImageView
-                    android:id="@+id/deleteButton"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/icon_delete_gray" />
-            </FrameLayout>
+                android:layout_height="24dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/setHighPriorityButton"
+                android:layout_marginEnd="4dp"
+                android:background="@drawable/icon_delete_gray" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
