--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -103,4 +103,8 @@
     <style name="Text.MainScreenSection.PostAddresses">
         <item name="android:background">@drawable/background_main_screen_post_addresses_section</item>
     </style>
+
+    <style name="Text.MainScreenSection.MemorableDates">
+        <item name="android:background">@drawable/background_main_screen_memorable_dates_section</item>
+    </style>
 </resources>
