--- a/app/src/main/res/layout/fragment_memorable_dates.xml
+++ b/app/src/main/res/layout/fragment_memorable_dates.xml
@@ -32,5 +32,25 @@
             android:background="@drawable/icon_delete_sweep_color_link"
             android:onClick="@{() -> viewModel.onClearDatesClick()}" />
 
+        <!--    TODO app:booleanVisibility="@{!viewModel.isMemorableDatesVisible()}"    -->
+        <LinearLayout
+            android:id="@+id/addMemorableDatesTitleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/addDateButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical"
+            android:visibility="gone">
+            <TextView
+                style="@style/Text.ExplanatoryMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/add_memorable_dates_title" />
+
+            <ImageView
+                style="@style/ExplanatoryMessageIcon"
+                android:src="@drawable/icon_gift_gray" />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
