--- a/app/src/main/res/layout/memorable_date_list_item.xml
+++ b/app/src/main/res/layout/memorable_date_list_item.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:toos="http://schemas.android.com/tools">
-<!--    <data>-->
-<!--        <variable-->
-<!--            name="viewModel"-->
-<!--            type="com.example.lifediary.adapters.MainNoteListAdapter.MainNoteListItemViewModel" />-->
-<!--    </data>-->
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.lifediary.adapters.MemorableDateListAdapter.MemorableDateListItemViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
