--- a/app/src/main/res/layout/fragment_memorable_dates.xml
+++ b/app/src/main/res/layout/fragment_memorable_dates.xml
@@ -32,7 +32,6 @@
             android:background="@drawable/icon_delete_sweep_color_link"
             android:onClick="@{() -> viewModel.onClearDatesClick()}" />
 
-        <!--    TODO app:booleanVisibility="@{!viewModel.isMemorableDatesVisible()}"    -->
         <LinearLayout
             android:id="@+id/addMemorableDatesTitleView"
             android:layout_width="match_parent"
@@ -40,7 +39,7 @@
             app:layout_constraintTop_toBottomOf="@id/addDateButton"
             app:layout_constraintBottom_toBottomOf="parent"
             android:orientation="vertical"
-            android:visibility="gone">
+            app:booleanVisibility="@{!viewModel.isDatesVisible()}">
             <TextView
                 style="@style/Text.ExplanatoryMessage"
                 android:layout_width="match_parent"
@@ -51,6 +50,17 @@
                 style="@style/ExplanatoryMessageIcon"
                 android:src="@drawable/icon_gift_gray" />
         </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/memorableDateListView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/addDateButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/memorable_date_list_item"
+            app:booleanVisibility="@{viewModel.isDatesVisible()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
