--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="app_light_green">#5465B653</color>
     <color name="app_blue">#03A9F4</color>
     <color name="app_light_blue">#5403A9F4</color>
+    <color name="app_orange">#E18F01</color>
     <color name="app_dark_gray">#515151</color>
     <color name="app_medium_dark_gray">#858585</color>
     <color name="app_medium_gray">#B3B3B3</color>
