Memorable dates screen: changed layout

--- a/app/src/main/res/layout/fragment_memorable_dates.xml
+++ b/app/src/main/res/layout/fragment_memorable_dates.xml
@@ -48,7 +48,7 @@
 
             <ImageView
                 style="@style/ExplanatoryMessageIcon"
-                android:src="@drawable/icon_gift_gray" />
+                android:src="@drawable/icon_gift_blue" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
