Add/edit memorable date screen: realized day number selection

--- a/app/src/main/res/layout/day_number_spinner_item.xml
+++ b/app/src/main/res/layout/day_number_spinner_item.xml
@@ -6,6 +6,6 @@
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    android:textAlignment="viewStart" />
+    android:paddingStart="28dp"
+    android:paddingEnd="28dp"
+    android:textAlignment="center" />
